--- a/docs/src/components/Homepage/styles.module.css
+++ b/docs/src/components/Homepage/styles.module.css
@@ -1,3 +1,9 @@
+/*
+ * SPDX-FileCopyrightText: 2022 - 2024 Ali Sajid Imami
+ *
+ * SPDX-License-Identifier: MIT
+ */
+
 .features {
     display: flex;
     align-items: center;
